--- a/Samoloty/bin/.gitignore
+++ b/Samoloty/bin/.gitignore
@@ -1,4 +1,13 @@
+/ListaLotnisk.class
+/ListaSamolotow.class
+/Lotnisko.class
+/Main.class
+/MainPanel$1.class
+/MainPanel$2.class
+/MainPanel$3.class
+/MainPanel.class
 /Mapa.class
 /Pozycja.class
 /Samolot.class
 /SwingAnimation.class
+/images/
